add endpoint for updating a chart design
CU-861n4upk4
