# api/openapi.yaml
@@ -1,7 +1,7 @@
-openapi: '3.0.3'
+openapi: "3.0.3"
 info:
-  version: '1.0.0'
-  title: 'carman public API'
+  version: "1.0.0"
+  title: "carman public API"
   description: Configure Radar Charts
 
 paths:
@@ -12,19 +12,30 @@ paths:
         in: path
         required: true
         schema:
-          $ref: '#/components/schemas/ID'
+          $ref: "#/components/schemas/ID"
     get:
       summary: Read a Radar Chart Design
       responses:
-        '200':
-          $ref: '#/components/responses/RadarChartDesign'
+        "200":
+          $ref: "#/components/responses/RadarChartDesign"
+
+    put:
+      summary: Update an existing radar chart design
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RadarChartDesign"
+      responses:
+        "200":
+          $ref: "#/components/responses/RadarChartDesign"
 
   /charts/designs/radar:
     get:
       summary: List all radar chart designs
       responses:
-        '200':
-          $ref: '#/components/responses/RadarChartDesigns'
+        "200":
+          $ref: "#/components/responses/RadarChartDesigns"
 
     post:
       summary: Create a new radar chart design
@@ -32,10 +43,10 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RadarChartDesign'
+              $ref: "#/components/schemas/RadarChartDesign"
       responses:
-        '201':
-          $ref: '#/components/responses/RadarChartDesign'
+        "201":
+          $ref: "#/components/responses/RadarChartDesign"
 
 components:
   schemas:
@@ -75,15 +86,15 @@ components:
         - startingAngle
       properties:
         id:
-          $ref: '#/components/schemas/ID'
+          $ref: "#/components/schemas/ID"
         name:
           type: string
         circularEdges:
-          $ref: '#/components/schemas/EdgeDesign'
+          $ref: "#/components/schemas/EdgeDesign"
         outerEdge:
-          $ref: '#/components/schemas/EdgeDesign'
+          $ref: "#/components/schemas/EdgeDesign"
         radialEdges:
-          $ref: '#/components/schemas/EdgeDesign'
+          $ref: "#/components/schemas/EdgeDesign"
         startingAngle:
           type: number
 
@@ -109,12 +120,12 @@ components:
               items:
                 type: array
                 items:
-                  $ref: '#/components/schemas/RadarChartDesign'
+                  $ref: "#/components/schemas/RadarChartDesign"
 
     RadarChartDesign:
       description: A radar chart design
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/RadarChartDesign'
+            $ref: "#/components/schemas/RadarChartDesign"
             required: id
