# internal/radarChartDesigns/api/handlers/put.go
@@ -2,17 +2,29 @@ package handlers
 
 import (
 	"encoding/json"
+	"errors"
+	"fmt"
 	"io"
 	"net/http"
 
 	"go.uber.org/zap"
 
+	"github.com/CBrather/carman-api/internal/app_errors"
 	"github.com/CBrather/carman-api/internal/radarChartDesigns/api/dtos"
 	"github.com/CBrather/carman-api/internal/radarChartDesigns/repository"
+	"github.com/go-chi/chi/v5"
 )
 
-func Create(repo *repository.Design) http.HandlerFunc {
+func UpdateByID(repo *repository.Design) http.HandlerFunc {
 	return func(w http.ResponseWriter, req *http.Request) {
+		id := chi.URLParam(req, "id")
+		if id == "" {
+			zap.L().Warn("UpdateByID handler called without id param")
+
+			http.Error(w, http.StatusText(http.StatusBadRequest), http.StatusBadRequest)
+			return
+		}
+
 		rawRequestBody, err := io.ReadAll(req.Body)
 		if err != nil {
 			zap.L().Warn("Unable to read bytes of the request body", zap.Error(err))
@@ -37,35 +49,37 @@ func Create(repo *repository.Design) http.HandlerFunc {
 			StartingAngle: newDesign.StartingAngle,
 		}
 
-		createdDesign, err := repo.Create(req.Context(), newDesignModel)
+		updatedDesign, err := repo.UpdateByID(req.Context(), id, newDesignModel)
 		if err != nil {
-			zap.L().Error("Failed to save new design", zap.Error(err))
-			zap.L().Debug("Failed to save new design", zap.Any("struct", newDesign))
+			if errors.Is(err, app_errors.ErrNotFound{}) {
+				zap.L().Warn(fmt.Sprintf("Failed updating design, as none with id %s was found", id))
+				http.Error(w, http.StatusText(http.StatusNotFound), http.StatusNotFound)
+			} else {
+				zap.L().Error(fmt.Sprintf("Failed to save updated design with id %s", id), zap.Error(err))
+				http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
+			}
 
-			http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
 			return
 		}
 
 		responseDTO := dtos.ResponseSingle{
-			ID:            createdDesign.IDString(),
-			Name:          createdDesign.Name,
-			CircularEdges: dtos.EdgeDesign(createdDesign.CircularEdges),
-			OuterEdge:     dtos.EdgeDesign(createdDesign.OuterEdge),
-			RadialEdges:   dtos.EdgeDesign(createdDesign.RadialEdges),
-			StartingAngle: createdDesign.StartingAngle,
+			ID:            updatedDesign.IDString(),
+			Name:          updatedDesign.Name,
+			CircularEdges: dtos.EdgeDesign(updatedDesign.CircularEdges),
+			OuterEdge:     dtos.EdgeDesign(updatedDesign.OuterEdge),
+			RadialEdges:   dtos.EdgeDesign(updatedDesign.RadialEdges),
+			StartingAngle: updatedDesign.StartingAngle,
 		}
 
 		responseBody, err := json.Marshal(responseDTO)
 		if err != nil {
-			zap.L().Error("Failed serializing new design after successful save", zap.Error(err))
-			zap.L().Debug("Failed serializing new design after successful save", zap.Any("struct", createdDesign))
+			zap.L().Error(fmt.Sprintf("Failed serializing updated design with id %s after successful save", id), zap.Error(err))
 
 			http.Error(w, "Internal Server Error occurred after the design was successfully saved", http.StatusInternalServerError)
 			return
 		}
 
 		w.Header().Set("Content-Type", "application/json")
-		w.WriteHeader(http.StatusCreated)
 		_, _ = w.Write(responseBody)
 	}
 }
